--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./
-          destination: ./_post
+          source: ./_post
+          destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
