--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "taot's blog"
 # Short bio or description (displayed in the header)
-description: "分享编程资源 | 学习路线 | 记录学习历程"
+description: "分享编程资源 | 学习路线 | 记录学习"
 
 #
 # Flags below are optional
@@ -28,6 +28,8 @@ navigation:
     url: /archive
   - name: 标签
     url: /tags
+  - name: 项目
+    url: /projs
 
 # Pagination
 paginate: 8
