--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "taot's blog"
 # Short bio or description (displayed in the header)
-description: "分享编程资源 | 学习路线 | 记录学习"
+description: "精诚所至，金石为开 | 不赌天意，不猜人心"
 
 #
 # Flags below are optional
@@ -22,14 +22,14 @@ description: "分享编程资源 | 学习路线 | 记录学习"
 navigation:
   - name: 首页
     url: /
-  - name: 关于
-    url: /about
   - name: 归档
     url: /archive
-  - name: 标签
-    url: /tags
   - name: 项目
     url: /projs
+  - name: 标签
+    url: /tags
+  - name: 关于
+    url: /about
 
 # Pagination
 paginate: 8
