--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ navigation:
     url: /
   - name: 文章
     url: /archive
-  - name: 归档
-    url: /archive
+  # - name: 归档
+  #   url: /archive
   - name: 标签
     url: /tags
   - name: 项目
@@ -40,11 +40,11 @@ excerpt_separator: <!-- more -->
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  #weibo: frommidworld #请输入你的微博个性域名 https://www.weibo.com/<thispart>
+  #weibo: 
   # behance: # https://www.behance.net/<username>
   dribbble:
-  # zhihu: ning-meng-cheng-31-94
-  email: 1624024615@qq.com
+  # zhihu: 
+  email: oehuosi@foxmail.com
   facebook:
   flickr:
   github: Taot-chen
@@ -59,7 +59,7 @@ footer-links:
   youtube:
 
 # Text under the icons in footer
-footer-text: Copyright (c) 2023 taot
+footer-text: Copyright (c) 2025 taot
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -93,7 +93,7 @@ permalink: /:title/
 paginate_path: /page:num/
 
 # The release of Jekyll Now that you're using
-version: v1.2.0
+# version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
