--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: "taot's blog"
+name: "Taot's Blog"
 # Short bio or description (displayed in the header)
 description: "精诚所至，金石为开 | 不赌天意，不猜人心"
 
@@ -59,7 +59,7 @@ footer-links:
   youtube:
 
 # Text under the icons in footer
-footer-text: Copyright (c) 2025 taot
+footer-text: Copyright (c) 2025 Taot
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
